--- a/style.css
+++ b/style.css
@@ -2,3 +2,9 @@
 	background-color: #20315A;
 	color: white;
 }
+
+.searchParameters {
+	color: #ffffff;
+    background-color: #2c3e50;
+    border-color: #2c3e50;
+}
